--- a/app/views/cocktails/_form.html.erb
+++ b/app/views/cocktails/_form.html.erb
@@ -1,4 +1,4 @@
 <%= simple_form_for(@cocktail) do |f| %>
     <%= f.input :name %>
-    <%= f.submit "submit"%>
+   <%= f.submit "submit", class: "btn btn-ghost" %>
 <% end %>
