--- a/app/views/cocktails/create.html.erb
+++ b/app/views/cocktails/create.html.erb
@@ -2,5 +2,12 @@
 
 <%= render 'form', cocktail: @cocktail %>
 
+<p class="btn btn-ghost">
 <%= link_to 'Show', @cocktail %>
+</p>
+<p class="btn btn-ghost">
 <%= link_to 'Back', cocktails_path %>
+</p>
+
+
+
