--- a/app/views/cocktails/new.html.erb
+++ b/app/views/cocktails/new.html.erb
@@ -1,5 +1,10 @@
-<h1>New Cocktail</h1>
+<div class="banner" style="background-image: linear-gradient(rgba(0,0,0,0.4),rgba(0,0,0,0.4)), url(https://images.unsplash.com/photo-1545438102-799c3991ffb2?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80);">
+  <div class="container">
+    <h1><strong>New Cocktail</strong></h1>
+    <p><%= render 'form', cocktail: @cocktail %></p>
+    <%= link_to 'Back', cocktails_path %>
+    </a>
+  </div>
+</div>
 
-<%= render 'form', cocktail: @cocktail %>
 
-<%= link_to 'Back', cocktails_path %>
