--- a/app/views/doses/new.html.erb
+++ b/app/views/doses/new.html.erb
@@ -1,11 +1,15 @@
-<h1>Add doses</h1>
-
-<%= simple_form_for [@cocktail, @dose] do |f| %>
-    <%= f.input :description %>
-    <%= f.association :ingredient %>
-    <%= f.submit "submit" %>
-<% end %>
-
-
-<%= link_to 'Back', cocktail_path(@cocktail) %>
-
+<div class="card-trip">
+  <img src="https://images.unsplash.com/photo-1500630967344-3b1f546423ce?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80" />
+  <div class="card-trip-infos">
+    <div>
+      <h2>Add this this and that!</h2>
+      <p>
+      <%= simple_form_for [@cocktail, @dose] do |f| %>
+      <%= f.input :description %>
+      <%= f.association :ingredient %>
+      <%= f.submit "submit", class: "btn-dose" %><%= link_to 'Back', cocktail_path(@cocktail), class: "btn-dose" %>
+      </p>
+      <% end %>
+    </div>
+  </div>
+</div>
